--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="/img/home.jpg">
+            <img src="/img/1.jpg">
         </div>
         <div class="home-content">
             <h1>Hi, I'm <span>Maks</span> </h1>
