--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <div class="home-content">
             <h1>Hi, I'm <span>Maks</span> </h1>
             <h3 class="typing-text">I'm a <span> </span> </h3>
-            <p> Based in Ukraine </p>
-            <p>I'm open to collaborating on interesting projects</p>
+            <p> And wizard who loves design and code. I spend most of my time designing and creating design websites. </p>
             <div class="social-icons">
                 <a href="http://surl.li/hjpfvq"> <i class="fa-brands fa-linkedin"> </i> </a>
                 <a href="https://github.com/mspoooo"> <i class="fa-brands fa-github"> </i> </a>
