--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="https://github.com/mspoooo"> <i class="fa-brands fa-github"> </i> </a>
                 <a href="https://www.instagram.com/mspoooo/"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="https://t.me/mspoooo" class="btn">Hire my telegram</a>
+            <a href="https://t.me/mspoooo" class="btn">My telegram</a>
         </div>
     </section>
 </body>
