--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h3 class="typing-text">I'm a <span> </span> </h3>
             <p> And wizard who loves design and code. I spend most of my time designing and creating design websites. </p>
             <div class="social-icons">
-                <a href="http://surl.li/hjpfvq"> <i class="fa-brands fa-linkedin"> </i> </a>
+                <a href="https://www.linkedin.com/in/mspoooo"> <i class="fa-brands fa-linkedin"> </i> </a>
                 <a href="https://github.com/mspoooo"> <i class="fa-brands fa-github"> </i> </a>
                 <a href="https://www.instagram.com/mspoooo/"><i class="fa-brands fa-instagram"></i></a>
             </div>
